--- a/.coveragerc
+++ b/.coveragerc
@@ -7,6 +7,9 @@ include =
 omit =
     tests/*
     km3io/__version__.py
+    km3io/trigger.py
+    km3io/fitparameters.py
+    km3io/reconstruction.py
 exclude_lines =
     pragma: no cover
     raise AssertionError
