--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -54,6 +54,14 @@ test-py3.7:
         - make test
     <<: *junit_definition
 
+test-py3.8:
+    image: docker.km3net.de/base/python:3.8
+    stage: test
+    script:
+        - *virtualenv_definition
+        - make test
+    <<: *junit_definition
+
 code-style:
     image: docker.km3net.de/base/python:3.7
     stage: test
