--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -111,3 +111,11 @@ pypi:
         - twine upload dist/*
     only:
         - tags
+
+cc-lyon:
+    image: docker.km3net.de/base/ci-helper:1
+    stage: release
+    script:
+        - sshpass -p $IN2P3_PASSWORD ssh -v $IN2P3_USERNAME@$IN2P3_HOST 'export MODULEPATH=/pbs/throng/km3net/modulefiles; source /usr/share/Modules/init/bash; module load python/3.7.5; pip install git+https://git.km3net.de/km3py/km3io.git'
+    # only:
+    #     -tags
