--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -120,5 +120,6 @@ cc-lyon:
         - ssh-keyscan -H $IN2P3_HOST > ~/.ssh/known_hosts
         - chmod 600 /root/.ssh/known_hosts
         - sshpass -p $IN2P3_PASSWORD ssh -v $IN2P3_USERNAME@$IN2P3_HOST 'export MODULEPATH=/pbs/throng/km3net/modulefiles; source /usr/share/Modules/init/bash; module load python/3.7.5; pip install git+https://git.km3net.de/km3py/km3io.git'
-    # only:
-    #     -tags
+    only:
+        - tags
+        - master
