Reactivate sphinx gallery

--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,5 +1,7 @@
+matplotlib
 memory_profiler
 numpydoc
+pillow
 pytest
 pytest-cov
 pytest-flake8
@@ -7,6 +9,7 @@ pytest-pylint
 pytest-watch
 sphinx
 sphinx-autoapi
+sphinx-gallery>=0.1.12
 sphinx_rtd_theme
 sphinxcontrib-versioning
 yapf>=0.29.0
