Allow Python 3.5 to fail until awkward1 is fixed
More information can be found at https://github.com/scikit-hep/awkward-1.0/issues/219

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,6 +37,7 @@ test-py3.5:
         - *virtualenv_definition
         - make test
     <<: *junit_definition
+    allow_failure: true
 
 test-py3.6:
     image: docker.km3net.de/base/python:3.6
