--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,3 +1,4 @@
+black
 km3net-testdata>=0.2.9
 matplotlib
 memory_profiler
@@ -13,5 +14,4 @@ sphinx-autoapi
 sphinx-gallery>=0.1.12
 sphinx_rtd_theme
 sphinxcontrib-versioning
-yapf>=0.30.0
 wheel
