--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,11 +19,9 @@ stages:
 
 .virtualenv_template: &virtualenv_definition |
   python -V
-  pip install virtualenv
-  virtualenv venv
+  python3 -m venv venv
   source venv/bin/activate
-  pip install -r requirements-dev.txt
-  make install
+  make install-dev
 
 .junit_template: &junit_definition
     artifacts:
@@ -59,7 +57,7 @@ code-style:
     stage: test
     script:
         - *virtualenv_definition
-        - yapf -r -d -e "venv" .
+        - make black-check
     allow_failure: true
 
 coverage:
