--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,7 +21,10 @@ stages:
   python -V
   python3 -m venv venv
   source venv/bin/activate
+  pip install -U pip setuptools wheel
+  pip freeze
   make install-dev
+  pip freeze
 
 .junit_template: &junit_definition
     artifacts:
