Fix Lyon CC release

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -123,7 +123,7 @@ cc-lyon:
         - mkdir -p /root/.ssh && chmod 700 /root/.ssh
         - ssh-keyscan -H $IN2P3_HOST > ~/.ssh/known_hosts
         - chmod 600 /root/.ssh/known_hosts
-        - sshpass -p $IN2P3_PASSWORD ssh -v $IN2P3_USERNAME@$IN2P3_HOST 'export MODULEPATH=/pbs/throng/km3net/modulefiles; source /usr/share/Modules/init/bash; module load python/3.7.5; pip install git+https://git.km3net.de/km3py/km3io.git'
+        - sshpass -p $IN2P3_PASSWORD ssh -v $IN2P3_USERNAME@$IN2P3_HOST 'export KM3NET_THRONG_DIR=/pbs/throng/km3net; export MODULEPATH=/pbs/throng/km3net/modulefiles; source /pbs/software/centos-7-x86_64/modules/ccenv.bash 4.7.0; module load km3net_env; module load python/3.7.5; pip install git+https://git.km3net.de/km3py/km3io.git'
     only:
         - tags
         - master
