--- a/.gitignore
+++ b/.gitignore
@@ -6,51 +6,21 @@ __pycache__/
 # C extensions
 *.so
 
-# Version info
-km3io/version.py
-
 # Distribution / packaging
 .Python
-env/
-bin/
+venv/
 build/
 develop-eggs/
 dist/
 eggs/
-lib/
-lib64/
-parts/
 sdist/
-var/
 *.egg-info/
-.installed.cfg
 *.egg
-.eggs
-pip-wheel-metadata
-
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
 
 # Unit test / coverage reports
-htmlcov/
-.tox/
 .coverage
 .cache
-nosetests.xml
-coverage.xml
-.coverage.*
-
-# Translations
-*.mo
-
-# Mr Developer
-.mr.developer.cfg
-.project
-.pydevproject
-
-# Rope
-.ropeproject
+reports
 
 # Sphinx documentation
 doc/_build/
@@ -58,28 +28,12 @@ doc/auto_examples/
 doc/modules/
 doc/api
 
-# VI swap files
-*.swp
-*.swo
-
-# PyCharm files
-.idea
-
 # jupyter files
 .ipynb_checkpoints/
 
-# 
-junit*.xml
-reports
-
-# misc
-*~
-*.dqd
-*.dat
-
 .pytest_cache/
-.DS_Store
+junit.xml
+.mypy_cache
 
-# venv, pyenv tmp
-.python-version
-venv
+# Version info
+src/km3io/version.py
