--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,6 @@
-include README.rst
+include README.rst CHANGELOG.rst CONTRIBUTING.rst
 include LICENSE
-include requirements.txt
+include setup.py setup.cfg pyproject.toml
+include src/km3io/version.py
+
+recursive-include tests
