Add `TimeConverter` and `has_(jmuon|jshower|aashower|dusjshower)`

--- a/setup.cfg
+++ b/setup.cfg
@@ -53,8 +53,8 @@ where = src
 [options.extras_require]
 all =
 dev =
-    black==21.6b0
-    km3net-testdata>=0.3.3
+    black>=22.3.0
+    km3net-testdata>=0.3.6
     ipykernel
     matplotlib
     memory_profiler
