--- a/setup.cfg
+++ b/setup.cfg
@@ -37,8 +37,8 @@ packages = find:
 install_requires =
     docopt
     numba>=0.50
-    awkward>=1.0.0rc2
-    awkward0
+    awkward>=1.10.1
+    awkward0>=0.15.5
     uproot3>=3.11.1
     uproot>=4.2.2
     setuptools_scm
