--- a/setup.cfg
+++ b/setup.cfg
@@ -37,10 +37,10 @@ packages = find:
 install_requires =
     docopt
     numba>=0.50
-    awkward~=1.10.1
+    awkward>=1.10.1,<=2
     awkward0>=0.15.5
-    uproot3~=3.11.1
-    uproot~=4.2.2
+    uproot3>=3.11.1
+    uproot>=4.2.2
     setuptools_scm
 python_requires = >=3.6
 include_package_data = True
