--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,5 +2,6 @@ include README.rst CHANGELOG.rst CONTRIBUTING.rst
 include LICENSE
 include setup.py setup.cfg pyproject.toml
 include src/km3io/version.py
+include codemeta.json
 
 recursive-include tests
