Require sphinx-gallery>=0.12.1

--- a/setup.cfg
+++ b/setup.cfg
@@ -68,7 +68,7 @@ dev =
     scipy
     sphinx
     sphinx-autoapi
-    sphinx-gallery>=0.1.12,<=0.11.1
+    sphinx-gallery>=0.12.1
     sphinx_rtd_theme
     sphinxcontrib-versioning
     wheel
