--- a/setup.cfg
+++ b/setup.cfg
@@ -68,7 +68,7 @@ dev =
     scipy
     sphinx
     sphinx-autoapi
-    sphinx-gallery>=0.12.1
+    sphinx-gallery
     sphinx_rtd_theme
     sphinxcontrib-versioning
     wheel
