Explicitly require numpy 2

--- a/setup.cfg
+++ b/setup.cfg
@@ -37,6 +37,7 @@ install_requires =
     docopt
     numba>=0.50
     awkward>=2
+    numpy>=2
     uproot>=5
     setuptools_scm
 python_requires = >=3.7
