--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -100,7 +100,7 @@ build-docs:
     script:
         - *virtualenv_definition
         - cd doc && make clean && make html
-    cache: {}
+    cache: []
 
 pages:
     image: git.km3net.de:4567/common/dockerfiles/base/python:3.12
@@ -113,7 +113,7 @@ pages:
     artifacts:
         paths:
             - public
-    cache: {}
+    cache: []
     only:
         - tags
         - master
@@ -135,7 +135,7 @@ docker:
 pypi:
     image: git.km3net.de:4567/common/dockerfiles/base/python:3.12
     stage: release
-    cache: {}
+    cache: []
     script:
         - pip install -U twine wheel
         - python setup.py sdist
