--- a/.github/workflows/resqui.yml
+++ b/.github/workflows/resqui.yml
@@ -9,26 +9,14 @@ jobs:
     environment: resqui
 
     steps:
-      - name: Debug secrets
-        shell: bash
-        run: |
-          if [[ -z "${{ secrets.RESQUI_GITHUB_TOKEN }}" ]]; then
-            echo "RESQUI_GITHUB_TOKEN is missing!"
-          else
-            echo "RESQUI_GITHUB_TOKEN is set"
-          fi
-
-          if [[ -z "${{ secrets.DASHVERSE_TOKEN }}" ]]; then
-            echo "DASHVERSE_TOKEN is missing!"
-          else
-            echo "DASHVERSE_TOKEN is set"
-          fi
 
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Run resqui action
-        uses: EVERSE-ResearchSoftware/QualityPipelines@rest-api
+        uses: EVERSE-ResearchSoftware/QualityPipelines@main
         with:
-          github_token: ${{ secrets.RESQUI_GITHUB_TOKEN }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           dashverse_token: ${{ secrets.DASHVERSE_TOKEN }}
